--- a/index.css
+++ b/index.css
@@ -62,6 +62,15 @@ button {
     text-decoration: underline;
 }
 
+.text-no-decor{
+    text-decoration: none;
+    color: var(--secondary-color);
+}
+
+.text-no-decor:hover{
+    color: var(--primary-color);
+}
+
 .img-center{
     margin: 2rem auto;
     display: flex;
