--- a/style/header.css
+++ b/style/header.css
@@ -50,13 +50,13 @@ header {
     box-shadow: var(--shadow-color) 0px 3px 8px;
 }
 
-.primary-solid-btn {
+.primary-solid-btn, .secondary-solid-btn:hover{
     color: var(--secondary-color);
     background-color: var(--primary-color);
     border: 1px solid var(--primary-color);
 }
 
-.primary-solid-btn:hover {
+.primary-solid-btn:hover,.secondary-solid-btn {
     color: var(--primary-color);
     background-color: var(--secondary-color);
     border: 1px solid var(--primary-color);
