--- a/style/cards.css
+++ b/style/cards.css
@@ -29,14 +29,13 @@
     opacity: 0.6;
 }
 
-.card-main:nth-child(2n+1) {
-    padding-right: 4.5rem;
+.main-left {
+    padding-right: 4rem;
 }
 
-.card-main:nth-child(2n) {
-    padding-left: 4.5rem;
+.main-right {
+    padding-left: 3.5rem;
 }
-
 
 .img-card-main {
     width: 15rem;
@@ -52,13 +51,12 @@
 }
 
 .card-item {
-    border: solid 0.1px;
     width: 15rem;
     height: 24.5rem;
     position: relative;
     padding-bottom: 0.5rem;
     box-shadow: var(--shadow-color) 0px 3px 8px;
-    border-radius: 1rem;
+    border-radius: 6px;
 }
 
 .img-item {
@@ -73,8 +71,8 @@
     padding: 5px;
     width: fit-content;
     position: absolute;
-    bottom: 10.4rem;
-    right: 9.25rem;
+    bottom: 10.5rem;
+    right: 9.35rem;
 }
 
 .card-info {
@@ -123,7 +121,43 @@
 .add-cart-btn {
     position: absolute;
     bottom: 0.5rem;
-    left: 4rem;
+    left: 0.8rem;
+    justify-content: center;
+}
+
+.wishlist-wrapper{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem;
+    justify-content: space-evenly;
+}
+
+.btn-wishlist{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 1.25rem;
+    right: 1.1rem;
+    height: 2rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background-color: var(--secondary-color);
+}
+
+.btn-wishlist .fa-heart{
+    font-size: 1.2rem;
+    color:var(--tertiary-color);
+}
+
+.btn-wishlist .fa-heart:hover{
+    font-size: 1.2rem;
+    color:var(--wishlist-color);
+}
+
+.add-cart-btn{
+    margin: auto;
+    width: 90%;
 }
 
 /* Cart Horizontal card */
@@ -156,7 +190,7 @@
     padding: 10px;
 }
 
-.card-horizontal-desc i{
+.quantity-cart-item i{
     font-size: 1.2rem;
 }
 
