--- a/wishlist.css
+++ b/wishlist.css
@@ -35,20 +35,8 @@ main{
     justify-content: space-evenly;
 }
 
-.btn-wishlist{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 1.25rem;
-    right: 1.1rem;
-    height: 2rem;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background-color: var(--secondary-color);
-}
 
-.btn-wishlist .fa-heart{
+.wishlist-wrapper .fa-heart{
     font-size: 1.2rem;
     color:var(--wishlist-color);
 }
